@@ -1,0 +1,126 @@
+Abetone
+Acquacanina
+Allerona
+Alviano
+Attigliano
+Auditore
+Bagnone
+Barchi
+Belforte
+Bolognola
+Borgo Pace
+Caldarola
+Calvi
+Camporotondo
+Careggine
+Carpegna
+Casale Marittimo
+Casola
+Castelsantangelo
+Castiglione
+Cerreto
+Cessapalombo
+Chianni
+Colmurano
+Comano
+Costacciaro
+Cutigliano
+Fabbriche
+Ferentillo
+Fiastra
+Ficulle
+Fiordimonte
+Fiuminata
+Fosciandora
+Fratta
+Fratte Rosa
+Frontino
+Frontone
+Gagliole
+Giove
+Giuncugnano
+Gualdo
+Guardea
+Guardistallo
+Lajatico
+Lisciano Niccone
+Londa
+Lorenzana
+Lugnano
+Lunano
+Mercatello sul Metauro
+Mercatino Conca
+Molazzana
+Monte Castello di Vibio
+Monte Cavallo
+Monte Cerignone
+Monte Grimano Terme
+Monte San Martino
+Monte Santa Maria Tiberina
+Montecatini
+Montecchio
+Monteciccardo
+Montecopiolo
+Montefranco
+Montegabbione
+Monteleone
+Montescudaio
+Monteverdi
+Monticiano
+Montone
+Muccia
+Orciano
+Otricoli
+Paciano
+Palazzuolo sul Senio
+Parrano
+Pascelupo
+Peglio
+Penna San Giovanni
+Penna in Teverina
+Piagge
+Pietrarubbia
+Pieve Torina
+Pievebovigliana
+Pioraco
+Piteglio
+Poggio San Vicino
+Poggiodomo
+Polino
+Porano
+Preci
+Radda in Chianti
+Radicofani
+Radicondoli
+Riparbella
+Ripe San Ginesio
+Sambuca Pistoiese
+San Casciano dei Bagni
+San Giorgio di Pesaro
+San Giovanni d'Asso
+San Godenzo
+San Romano in Garfagnana
+Sant'Anatolia di Narco
+Sant'Angelo in Pontano
+Sant'Ippolito
+Santa Luce
+Sassofeltrio
+Scheggia
+Scheggino
+Sefro
+Sellano
+Serra Sant'Abbondio
+Serrapetrona
+Serravalle di Chienti
+Sillano
+Tavoleto
+Trequanda
+Ussita
+Vagli Sotto
+Vallo di Nera
+Valtopina
+Vergemoli
+Villa Basilica
+Villa Collemandina
+Visso
+Zeri
