@@ -5,6 +5,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
 ## [Unreleased]
 ### Added
 - monastery experiment
+- (male) people first name file from Montaperti book
 
 ### Fixed
 - mapped stairs and look action keys
